style: styles globals altered

--- a/gmf/src/main/webapp/app/entities/blog/list/blog.component.html
+++ b/gmf/src/main/webapp/app/entities/blog/list/blog.component.html
@@ -5,7 +5,7 @@
       <h3 class="subtitulo">Qual termo gostaria de acessar hoje?</h3>
     </div>
     <button 
-      class="adicionar d-flex align-items-center justify-content-between gap-4"
+      class="adicionar d-flex align-items-center justify-content-between mb-5 gap-4"
       (click)="openModalAdicionarTurma()"
       >
       <img src="../../../../content/images/move.svg" alt="icone">
