--- a/gmf/src/main/webapp/app/entities/blog/list/blog.component.scss
+++ b/gmf/src/main/webapp/app/entities/blog/list/blog.component.scss
@@ -52,6 +52,7 @@
     border: none;
     box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.2), -1px 0px 4px 0px rgba(0, 0, 0, 0.25);
     cursor: pointer;
+    background-color: #E2F4C5;
   
     .text-card {
       color: var(--color-gray-600);
