--- a/gmf/src/main/webapp/app/entities/blog/update/blog-update.component.scss
+++ b/gmf/src/main/webapp/app/entities/blog/update/blog-update.component.scss
@@ -1,3 +1,13 @@
 .content-modal {
     padding: 24px;
 }
+
+
+button {
+    cursor: pointer;
+}
+
+.btn-primary  {
+    background-color: var(--color-secondary);
+    border: none;
+}
