--- a/gmf/src/main/webapp/app/entities/post/delete/post-delete-dialog.component.html
+++ b/gmf/src/main/webapp/app/entities/post/delete/post-delete-dialog.component.html
@@ -11,11 +11,11 @@
 
     <div class="modal-footer">
       <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="cancel()">
-        <fa-icon icon="ban"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
+        <span>Cancelar</span>
       </button>
 
       <button id="jhi-confirm-delete-post" data-cy="entityConfirmDeleteButton" type="submit" class="btn btn-danger">
-        <fa-icon icon="times"></fa-icon>&nbsp;<span jhiTranslate="entity.action.delete">Delete</span>
+        <span>Excluir</span>
       </button>
     </div>
   </form>
