--- a/gmf/src/main/webapp/app/entities/post/update/post-update.component.html
+++ b/gmf/src/main/webapp/app/entities/post/update/post-update.component.html
@@ -78,9 +78,9 @@
         </div>
       </div>
 
-      <div>
+      <div class="d-flex justify-content-end gap-3">
         <button type="button" id="cancel-save" data-cy="entityCreateCancelButton" class="btn btn-secondary" (click)="previousState()">
-          <fa-icon icon="ban"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
+          <span>Cancelar</span>
         </button>
 
         <button
@@ -89,8 +89,9 @@
           data-cy="entityCreateSaveButton"
           [disabled]="editForm.invalid || isSaving"
           class="btn btn-primary"
+          style="background-color: var(--color-secondary); border: none;"
         >
-          <fa-icon icon="save"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
+          <span>Salvar</span>
         </button>
       </div>
     </form>
