--- a/gmf/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/gmf/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary" id="nav-bar">
   <div class="container-fluid">
-      <img  class="logo" src="../../../content/images/logo.svg" alt="logo" style="cursor: pointer;">
+      <img routerLink="/home" class="logo" src="../../../content/images/logo.svg" alt="logo" style="cursor: pointer;">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
           aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
           <img src="../../../content/images/menu.svg" alt="icon">
