--- a/gmf/src/main/webapp/app/login/login.component.html
+++ b/gmf/src/main/webapp/app/login/login.component.html
@@ -5,7 +5,7 @@
       <img class="logo" src="../../content/images/Login.svg" alt="logo">
       <h2>Guia do Mochileiro<br> Fatecano</h2>
       <div class="form-group d-flex flex-column gap-2">
-        <label for="username">E-mail</label>
+        <label for="username">Nome</label>
         <input 
           type="text"
           name="username"
