--- a/gmf/src/main/webapp/app/login/login.component.html
+++ b/gmf/src/main/webapp/app/login/login.component.html
@@ -10,7 +10,7 @@
           type="text"
           name="username"
           id="username"
-          placeholder="Insira seu e-mail"
+          placeholder="Insira seu usuário"
           formControlName="username"
           #username
           data-cy="username"
