style: layout altered

--- a/gmf/src/main/webapp/app/login/login.component.html
+++ b/gmf/src/main/webapp/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="content-login d-flex align-items-center">
+<div class="content-login d-flex align-items-center justify-content-center" style="height: 92vh;  gap: 40px">
   <img class="img-left" src="../../content/images/background2.svg" alt="icone">
   <div class="rigth">
     <form role="form" (ngSubmit)="login()" [formGroup]="loginForm" class="d-flex align-items-center flex-column gap-4">
