--- a/gmf/src/main/webapp/content/scss/global.scss
+++ b/gmf/src/main/webapp/content/scss/global.scss
@@ -71,8 +71,11 @@ Generic styles
 
 .jh-card {
   padding: 1.5%;
-  margin-top: 20px;
+  // margin-top: 20px;
   border: none;
+  height: 100vh;
+  display: flex;
+  // justify-content: center;
 }
 
 .error {
@@ -121,6 +124,7 @@ Custom alerts for notification
 .alerts {
   .alert {
     text-overflow: ellipsis;
+
     pre {
       background: none;
       border: none;
@@ -129,22 +133,28 @@ Custom alerts for notification
       padding: 0;
       margin: 0;
     }
+
     .popover pre {
       font-size: 10px;
     }
   }
+
   .jhi-toast {
     position: fixed;
     width: 100%;
+
     &.left {
       left: 5px;
     }
+
     &.right {
       right: 5px;
     }
+
     &.top {
       top: 55px;
     }
+
     &.bottom {
       bottom: 55px;
     }
@@ -161,7 +171,7 @@ Custom alerts for notification
 entity list page css
 ========================================================================== */
 
-.table-entities thead th .d-flex > * {
+.table-entities thead th .d-flex>* {
   margin: auto 0;
 }
 
@@ -176,7 +186,7 @@ entity detail page css
 }
 
 @media screen and (min-width: 768px) {
-  .row-md.jh-entity-details > {
+  .row-md.jh-entity-details> {
     dt {
       float: left;
       overflow: hidden;
@@ -186,6 +196,7 @@ entity detail page css
       white-space: nowrap;
       padding: 0.5em 0;
     }
+
     dd {
       border-bottom: 1px solid #eee;
       padding: 0.5em 0;
@@ -236,6 +247,7 @@ angular-cli removes postcss-rtl processed inline css, processed rules must be ad
     }
   }
 }
+
 /* jhipster-needle-scss-add-main JHipster will add new css style */
 
 
@@ -384,18 +396,18 @@ table {
 }
 
 :root {
-  --color-primary:   #2AEF88;
+  --color-primary: #2AEF88;
   --color-secondary: #21BC6B;
   --color-secondary-hover: #1d9c5a;
-  --color-tertiary:  #148B4D;
-  --color-white:     #FFFFFF;
-  --color-black:     #000000;
-  --color-gray-100:  #F1F0F5;
-  --color-gray-200:  #C6C5CE;
-  --color-gray-300:  #7A7786;
-  --color-gray-400:  #5F5C6B;
-  --color-gray-500:  #4E4B59;
-  --color-gray-600:  #3E3E3E;
+  --color-tertiary: #148B4D;
+  --color-white: #FFFFFF;
+  --color-black: #000000;
+  --color-gray-100: #F1F0F5;
+  --color-gray-200: #C6C5CE;
+  --color-gray-300: #7A7786;
+  --color-gray-400: #5F5C6B;
+  --color-gray-500: #4E4B59;
+  --color-gray-600: #3E3E3E;
 }
 
 
