wip: entities at navbar altered

--- a/gmf/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/gmf/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -14,6 +14,10 @@
             <a class="nav-link active" aria-current="page">Home</a>
           </li>
           <li class="d-flex align-items-center nav-item" routerLink="/post">
+            <img class="icon" src="../../../content/images/bell.svg" alt="icon">
+            <a class="nav-link active" aria-current="page">Notificações</a>
+          </li>
+          <li class="d-flex align-items-center nav-item" routerLink="/post">
             <img class="icon" src="../../../content/images/book.svg" alt="icon">
             <a class="nav-link active" aria-current="page">Matérias</a>
           </li>
