--- a/guiamochileirofatecano/src/main/webapp/app/layouts/main/main.component.html
+++ b/guiamochileirofatecano/src/main/webapp/app/layouts/main/main.component.html
@@ -1,7 +1,7 @@
 <router-outlet name="navbar"></router-outlet>
 
 
-<div class="container-fluid">
+<div class="container-fluid p-0">
   <div class="card jh-card">
     <router-outlet></router-outlet>
   </div>
