wip: navbar altered

--- a/guiamochileirofatecano/src/main/webapp/app/layouts/navbar/navbar.component.scss
+++ b/guiamochileirofatecano/src/main/webapp/app/layouts/navbar/navbar.component.scss
@@ -1,36 +1,47 @@
-@import '~bootstrap/scss/functions';
-@import '~bootstrap/scss/variables';
-
-/* ==========================================================================
-Navbar
-========================================================================== */
-
-.navbar-version {
-  font-size: 0.65em;
-  color: $navbar-dark-color;
+#nav-bar {
+  background-color: var(--color-secondary)!important;
+  padding: 16px 92px;
 }
 
-.profile-image {
-  height: 1.75em;
-  width: 1.75em;
+#navbarScroll {
+  justify-content: flex-end!important;
 }
 
-.navbar {
-  padding: 0.2rem 1rem;
+.navbar-nav {
+  display: flex;
+  gap:20px;
+  margin: 0!important;
+}
 
-  a.nav-link {
-    font-weight: 400;
+.navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
+  color: var(--color-white);
+}
+
+.icon {
+  width: 20px
+}
+
+.nav-item, .logo {
+  cursor: pointer;
+}
+
+.navbar-toggler {
+  border: 1px solid var(--color-white);
+}
+
+@media screen and (max-width: 768px) {
+  .navbar-nav {
+    gap:4px;
+    margin-top:12px!important;
+  }
+
+  .nav-item {
+    gap:8px
   }
 }
 
-/* ==========================================================================
-Logo styles
-========================================================================== */
-.logo-img {
-  height: 45px;
-  width: 45px;
-  display: inline-block;
-  vertical-align: middle;
-  background: url('../../../content/images/logo-jhipster.png') no-repeat center center;
-  background-size: contain;
+@media screen and (max-width: 575px) {
+  #nav-bar {
+    padding: 12px 20px;
+  }
 }
