feat: condition added at navbar

--- a/guiamochileirofatecano/src/main/webapp/app/layouts/main/main.component.html
+++ b/guiamochileirofatecano/src/main/webapp/app/layouts/main/main.component.html
@@ -1,4 +1,4 @@
-<router-outlet name="navbar"></router-outlet>
+  <router-outlet name="navbar" *ngIf="isAuthenticated"></router-outlet>
 
 
 <div class="container-fluid p-0">
