--- a/guiamochileirofatecano/src/main/webapp/app/entities/termos/list/termos.component.html
+++ b/guiamochileirofatecano/src/main/webapp/app/entities/termos/list/termos.component.html
@@ -1,110 +1,44 @@
-<div>
-  <h2 id="page-heading" data-cy="TermosHeading">
-    <span appTranslate="gmfApp.termos.home.title">Termos</span>
-
-    <div class="d-flex justify-content-end">
-      <button class="btn btn-info me-2" (click)="load()" [disabled]="isLoading">
-        <fa-icon icon="sync" [spin]="isLoading"></fa-icon>
-        <span appTranslate="gmfApp.termos.home.refreshListLabel">Atualizar lista</span>
-      </button>
-
-      <button
-        id="jh-create-entity"
-        data-cy="entityCreateButton"
-        class="btn btn-primary jh-create-entity create-termos"
-        [routerLink]="['/termos/new']"
-      >
-        <fa-icon icon="plus"></fa-icon>
-        <span appTranslate="gmfApp.termos.home.createLabel"> Criar novo Termos </span>
-      </button>
+<div class="content-home" >
+  <div class="d-flex flex-wrap justify-content-between mb-4">
+    <div class="d-flex flex-column gap-2">
+      <h2 class="titulo">Termos</h2>
+      <h3 class="subtitulo">Qual termo gostaria de acessar hoje?</h3>
     </div>
-  </h2>
-
-  <app-alert-error></app-alert-error>
-
-  <app-alert></app-alert>
-
-  <div class="alert alert-warning" id="no-result" *ngIf="termos?.length === 0">
-    <span appTranslate="gmfApp.termos.home.notFound">Nenhum Termos encontrado</span>
+    <button class="adicionar d-flex align-items-center justify-content-between mb-5 gap-4" [routerLink]="['/termos/new']">
+      <img src="../../../../content/images/move.svg" alt="icone">
+      <span>Adicionar Termo</span>
+    </button>
   </div>
-
-  <div class="table-responsive table-entities" id="entities" *ngIf="termos && termos.length > 0">
-    <table class="table table-striped" aria-describedby="page-heading">
-      <thead>
-        <tr appSort [(predicate)]="predicate" [(ascending)]="ascending" (sortChange)="navigateToWithComponentValues()">
-          <th scope="col" appSortBy="id">
-            <div class="d-flex">
-              <span appTranslate="global.field.id">Código</span>
-              <fa-icon class="p-1" icon="sort"></fa-icon>
-            </div>
-          </th>
-          <th scope="col" appSortBy="nome">
-            <div class="d-flex">
-              <span appTranslate="gmfApp.termos.nome">Nome</span>
-              <fa-icon class="p-1" icon="sort"></fa-icon>
-            </div>
-          </th>
-          <th scope="col" appSortBy="semestre">
-            <div class="d-flex">
-              <span appTranslate="gmfApp.termos.semestre">Semestre</span>
-              <fa-icon class="p-1" icon="sort"></fa-icon>
-            </div>
-          </th>
-          <th scope="col" appSortBy="ano">
-            <div class="d-flex">
-              <span appTranslate="gmfApp.termos.ano">Ano</span>
-              <fa-icon class="p-1" icon="sort"></fa-icon>
-            </div>
-          </th>
-          <th scope="col"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let termos of termos; trackBy: trackId" data-cy="entityTable">
-          <td>
-            <a [routerLink]="['/termos', termos.id, 'view']">{{ termos.id }}</a>
-          </td>
-          <td appTranslate="{{ 'gmfApp.NumeroTermo.' + termos.nome }}">{{ termos.nome }}</td>
-          <td appTranslate="{{ 'gmfApp.NumeroSemestre.' + termos.semestre }}">{{ termos.semestre }}</td>
-          <td>{{ termos.ano }}</td>
-          <td class="text-end">
-            <div class="btn-group">
-              <button type="submit" [routerLink]="['/termos', termos.id, 'view']" class="btn btn-info btn-sm" data-cy="entityDetailsButton">
-                <fa-icon icon="eye"></fa-icon>
-                <span class="d-none d-md-inline" appTranslate="entity.action.view">Visualizar</span>
-              </button>
-
-              <button type="submit" [routerLink]="['/termos', termos.id, 'edit']" class="btn btn-primary btn-sm" data-cy="entityEditButton">
-                <fa-icon icon="pencil-alt"></fa-icon>
-                <span class="d-none d-md-inline" appTranslate="entity.action.edit">Editar</span>
-              </button>
-
-              <button type="submit" (click)="delete(termos)" class="btn btn-danger btn-sm" data-cy="entityDeleteButton">
-                <fa-icon icon="times"></fa-icon>
-                <span class="d-none d-md-inline" appTranslate="entity.action.delete">Excluir</span>
-              </button>
-            </div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
-  <div *ngIf="termos && termos.length > 0">
-    <div class="d-flex justify-content-center">
-      <app-item-count [params]="{ page: page, totalItems: totalItems, itemsPerPage: itemsPerPage }"></app-item-count>
+  <div class="group-cards d-flex flex-wrap justify-content-between gap-4 mb-4">
+    <div class="card d-flex align-items-center justify-content-center" *ngFor="let termos of termos; trackBy: trackId">
+        <div ngbDropdown class="more">
+          <img class="cursor" src="../../../../content/images/more-vertical.svg" alt="icon" ngbDropdownToggle>
+          <div ngbDropdownMenu aria-labelledby="dropdownConfig">
+            <button 
+              ngbDropdownItem  
+              class="d-flex align-items-center gap-3" 
+              [routerLink]="['/termos', termos?.id, 'edit']"
+              >
+              <img class="icon-card" src="../../../../content/images/edit.svg" alt="icon">
+              Editar
+            </button>
+            <button 
+              ngbDropdownItem 
+              class="d-flex align-items-center gap-3"
+              type="submit" 
+              (click)="delete(termos)"
+              >
+              <img class="icon-card" src="../../../../content/images/trash.svg" alt="icon">
+              Excluir
+            </button>
+          </div>
+        </div>
+      <h2 class="text-card" *ngIf="termos.nome === 'PRIMEIRO'">1° Termo</h2>
+      <h2 class="text-card" *ngIf="termos.nome === 'SEGUNDO'">2° Termo</h2>
+      <h2 class="text-card" *ngIf="termos.nome === 'TERCEIRO'">3° Termo</h2>
+      <h2 class="text-card" *ngIf="termos.nome === 'QUARTO'">4° Termo</h2>
+      <h2 class="text-card" *ngIf="termos.nome === 'QUINTO'">5° Termo</h2>
+      <h2 class="text-card" *ngIf="termos.nome === 'SEXTO'">6° Termo</h2>
     </div>
-
-    <div class="d-flex justify-content-center">
-      <ngb-pagination
-        [collectionSize]="totalItems"
-        [page]="page"
-        [pageSize]="itemsPerPage"
-        [maxSize]="5"
-        [rotate]="true"
-        [boundaryLinks]="true"
-        (pageChange)="navigateToPage($event)"
-      ></ngb-pagination>
-    </div>
-  </div>
+  </div> 
 </div>
