feat: add new component and routes

--- a/guiamochileirofatecano/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/guiamochileirofatecano/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -29,7 +29,7 @@
             <img class="icon" src="../../../content/images/clipboard.svg" alt="icon">
             <a class="nav-link active" aria-current="page">Resumos</a>
           </li>
-          <li class="d-flex align-items-center nav-item">
+          <li class="d-flex align-items-center nav-item" routerLink="termos/valores">
             <img class="icon" src="../../../content/images/star.svg" alt="icon">
             <a class="nav-link active" aria-current="page">Valores</a>
           </li>
