feat: option altered at resumos-update

--- a/guiamochileirofatecano/src/main/webapp/app/entities/resumos/update/resumos-update.component.html
+++ b/guiamochileirofatecano/src/main/webapp/app/entities/resumos/update/resumos-update.component.html
@@ -80,7 +80,7 @@
           >
             <option [ngValue]="null"></option>
             <option [ngValue]="disciplinasOption" *ngFor="let disciplinasOption of disciplinasSharedCollection">
-              {{ disciplinasOption.id }}
+              {{ disciplinasOption.nome }}
             </option>
           </select>
         </div>
